build_log.txt
> Task :clean
> Task :paperweightUserdevSetup UP-TO-DATE

> Task :compileJava FAILED
C:\Users\marti\Documents\GitHub\vChat\src\main\java\me\marti\vchat\managers\ItemViewManager.java:46: error: cannot find symbol
                plugin.getMiniMessage().deserialize(title));
                      ^
  symbol:   method getMiniMessage()
  location: variable plugin of type VChat
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/marti/Documents/GitHub/vChat/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  C:\Users\marti\Documents\GitHub\vChat\src\main\java\me\marti\vchat\managers\ItemViewManager.java:46: error: cannot find symbol
                  plugin.getMiniMessage().deserialize(title));
                        ^
    symbol:   method getMiniMessage()
    location: variable plugin of type VChat
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
3 actionable tasks: 2 executed, 1 up-to-date
